--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>New git project</title>
 </head>
 <body>
-    <h1>Что-то новенькое</h1>
+    <h1>Что-то ноhfjjgjgjвенькое</h1>
+    <h2>Что-то ноhfjjgjgjвенькое</h2>
+
 </body>
 </html>
