--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Что-то ноhfjjgjgjвенькое</h1>
-    <h2>Что-то ноhfjjgjgjвенькое</h2>
+    <h2>Чтоc-то ноhfjjgjgjвенькое</h2>
 
 </body>
 </html>
